# Multiplex

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Client.cpp  Jenkinsfile  LICENSE  MTMultiplex.h  Packing.cpp  Packing.h  Server.cpp  temp.txt
MTMultiplex/: Base.cpp  Base.h  CMakeLists.txt  Client.cpp  Client.h  External.cpp  External.h  MTMultiplex.cpp  MTMultiplex.h  Packing.cpp  Packing.h  Server.cpp  Server.h  mtmultiplex_export.h
MTMultiplex-Test/: CMakeLists.txt  MTMultiplex.lib  MTMultiplexTest.cpp  MTMultiplexTest.h
MTMultiplex/lib/msquic/: msquic.lib
cmake/: Toolchain-cross-mingw32-linux.cmake
include/multiplex/: CMakeLists.txt  base.hpp  client.hpp  external.h  multiplex.hpp  packing.hpp  server.hpp  types.hpp
src/: CMakeLists.txt  base.cpp  client.cpp  error.hpp  external.cpp  packing.cpp  server.cpp  types.cpp
